# DBNets

./: MANIFEST.in  README.md  pyproject.toml
SBI/: config.py  config.yaml  params.py  sweep.py  train_npe.py  train_npe_new.py  validation.py
examples/: example_of_application.ipynb  finetuning.ipynb
gwlup/: Fine tuning.ipynb  before.pkl  fine_tuned.pkl  memory0.1.pkl  memory0.3.pkl  pdfclass.py
src/DBNets/: DBNets.py  oofargo.py  pdfclass.py  preproc.py  test.py
src/DBNets.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/DBNets/trained/final/: scores.data
src/DBNets/trained/final/0.1/: fingerprint.pb  history.hist  saved_model.pb
src/DBNets/trained/final/0.2/: fingerprint.pb  history.hist  saved_model.pb
src/DBNets/trained/final/0.3/: fingerprint.pb  history.hist  saved_model.pb
src/DBNets/trained/finalRI/: scores.data
src/DBNets/training/: models.py  train.py
test/: gen_data_4_SBI.py  gen_test_data.py  test.ipynb
tests/finalAllT/: DGBNets.py  Visualize filters.ipynb  comppred.npy  errordist.pgf  mtarget.npy  oofargo.py  predobj.pickle  selected.csv  stderrhist.pgf  test_set.ipynb
tests/finalAllT/savings/: sigma_model.npy  sigma_phy.npy  sigmas_test.npy
training/: config.py  data_preparation_augm.ipynb  fix_err_saved.py  models.py  params.csv  radiative_transfer.py  requirements.txt  run.py  run_aug.py  selected.csv  sweep.py  train_multip.py
training/training_data/only_subs_nosmooth/1000/: data.npy
training/training_data/only_subs_nosmooth/1500/: data.npy
training/training_data/only_subs_nosmooth/500/: data.npy
(+549 files in other folders)
