[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "DBNets"
version = "1.0.0"
authors = [
  { name="Alessandro Ruzza", email="alessandro.ruzza@unimi.it" },
{name="Giuseppe Lodato"},
{name="Giovanni Pietro Rosotti"}
]
description = "Dust Busters Nets - Deep learning tool for mass inference of gap opening planets in dusty discs."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU GPLv3 License",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "pandas",
  "tensorflow",
  "itertools",
  "scipy",
  "tf_keras_vis",
  "tqdm",
  "pylab",
  "importlib",
  "opencv-python",
  "astropy",
]

[project.urls]
"Homepage" = "https://github.com/aleruzza/DBNets"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
# scanning for namespace packages is true by default in pyproject.toml, so
# you need NOT include the following line.
namespaces = true
where = ["src"]